--- a/frontend/static/styles/materias.css
+++ b/frontend/static/styles/materias.css
@@ -27,15 +27,14 @@ a:visited {
 
 a:hover {
     text-decoration: none;
-    color:white;
-    
+    color: #212529;
+    background-color: rgb(197, 217, 235);
 }
 
 a:active {
     text-decoration: none;
 }
 
-.card-body.text-center:hover{
-    background-color: grey;
-    color: white;
+.card1.d-flex.flex-column:hover{
+    background-color: rgb(197, 217, 235);
 }
