--- a/frontend/templates/macroEscolar.html
+++ b/frontend/templates/macroEscolar.html
@@ -7,7 +7,7 @@
                 <div class="row">
                     {%for column in row %}
                     <div class="col-6 col-sm-4 p-1">
-                        <div class="card d-flex flex-column">
+                        <div class="card1 d-flex flex-column">
                             <div class="card-body text-center">
                                 <a class="card-title" href="{{url_for('vistAlumno.getplan',idcar=column[0])}}">{{column[1]}}</a>
                             </div>
@@ -30,7 +30,7 @@
                 <div class="row">
                     {%for column in row %}
                     <div class="col-6 col-sm-4 p-1">
-                        <div class="card d-flex flex-column">
+                        <div class="card1 d-flex flex-column">
                             <div class="card-body text-center">
                                 <a class="card-title" href="{{url_for('vistAlumno.getMateriasCarreraPlanID', idcar = column[2], idplan=column[0], idcarpo=column[4])}}">{{column[1]}}</a>
                             </div>
@@ -69,6 +69,32 @@
         </div> 
     </div>
 <br>
+{%endmacro%}
+
+{% macro show_carreras_plan(rowcarpo)%}
+    <br>
+    <div class="container">
+        <div class="card">
+            <div class="card-header text-center align-items-center h-100 p-4 ">
+                <h1> Carreras Inscriptas </h1>
+                <div class="row">
+                    {%for column in rowcarpo %}
+                        <div class="col-6 col-sm-4 p-1">
+                            <a class="card-title" href="{{url_for('vistAlumno.getMateriasInscriptas',idcarpo=column[3])}}">
+                                <div class="card d-flex flex-column">
+                                    <div class="card-body text-center">
+                                        <h5 class="card-title">Carrera: {{column[0]}}</h5>
+                                        <h5 class="card-title">Plan de Estudio: {{column[1]}}</h5>
+                                        <h5 class="card-title">Orientacion: {{column[2]}}</h5>
+                                    </div>
+                                </div>
+                            </a>    
+                        </div>
+                    {%endfor%}    
+                </div>
+            </div> 
+        </div> 
+    </div>
 {%endmacro%}
 
 
